tests/fixtures/invalid/return-6.py
def _():  # Check 3
    a = 1
    # Lorem ipsum dolor sit amet
    return 1

def _():  # Check 4
    a = 1
    """
    Lorem ipsum dolor sit amet
    """
    return 1

def _():  # Check 5
    a = """
    Multiline string assignment
    """
    return 1

def _():  # Check 6
    a = 1
    return 1

def _():  # Check 7
    return 1
    return 1

def _():  # Check 8
    print(1)
    return 1
